# oni

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
dep/: glew.cmake  glfw.cmake
granite-core/: main.cpp
granite-core-demo/src/: CMakeLists.txt  main.cpp
granite-core/src/graphics/: CMakeLists.txt  batchrenderer2d.cpp  renderable2d.h  renderer2d.h  shader.cpp  shader.h  simple2drenderer.cpp  simple2drenderer.h  window.cpp  window.h
granite-core/src/graphics/buffers/: buffer.cpp  buffer.h  indexbuffer.cpp  indexbuffer.h  vertarray.cpp  vertarray.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h
lib/Box2D/: CMakeLists.txt
lib/soloud/: CMakeLists.txt
lib/soloud/src/audiosource/vizsn/: soloud_vizsn.cpp
lib/soloud/src/c_api/: soloud_c.cpp
oni-core-demo/src/: CMakeLists.txt  main.cpp
oni-core/src/buffers/: CMakeLists.txt  buffer.cpp  index-buffer.cpp  indexbuffer.cpp  vertex-array.cpp  vertexarray.cpp
oni-core/src/graphics/: CMakeLists.txt  _car.cpp  batch-renderer-2d.cpp  batch-renderer2d.cpp  batchrenderer2d.cpp  car.cpp  dynamic-tile-layer.cpp  dynamictilelayer.cpp  font-manager.cpp  layer.cpp  light.cpp  shader.cpp  simple-2d-renderer.cpp  simple2drenderer.cpp  staticsprite.cpp  texture.cpp  tilelayer.cpp  window.cpp
oni-server/: CMakeLists.txt  main.cpp
oni-server/inc/oni-server/common/: defines.h
oni-server/inc/oni-server/entities/: tile-world.h
oni-server/inc/oni-server/game/: oni-server-game.h  server-game.h
oni-server/inc/oni-server/level/: oni-server-level-tile-world.h
oni-server/src/: CMakeLists.txt
oni-server/src/entities/: CMakeLists.txt  tile-world.cpp
oni-server/src/game/: CMakeLists.txt  oni-server-game.cpp  server-game.cpp
oni-server/src/level/: CMakeLists.txt  oni-server-level-tile-world.cpp
src/asset/: CMakeLists.txt  oni-asset-manager.cpp
src/audio/: CMakeLists.txt  audio-manager-fmod.cpp  audio-manager-soloud.cpp  audio-manager.cpp  oni-audio-manager.cpp  oni-audio-system-car-engine-pitch.cpp  oni-audio-system-play-pause-sound.cpp
src/buffers/: CMakeLists.txt  buffer.cpp  index-buffer.cpp  vertex-array.cpp
src/entities/: CMakeLists.txt  basic-entity-repo.cpp  client-data-manager.cpp  create-entity.cpp  entity-factory.cpp  entity-manager.cpp  entity.cpp  manage-hierarchy.cpp  oni-entities-client-data-manager.cpp  oni-entities-entity-manager.cpp  oni-entities-entity.cpp  oni-entities-factory-client.cpp  oni-entities-factory-server.cpp  oni-entities-factory.cpp  oni-entities-manager.cpp  oni-entities-serialization.cpp  serialization.cpp  tile-world.cpp  vehicle-entity-repo.cpp  vehicle.cpp  world.cpp
src/entities/factory/client/: CMakeLists.txt  oni-entities-factory-client.cpp
src/entities/factory/server/: CMakeLists.txt  oni-entities-factory-server.cpp  oni-entities-factory-server.cpp.orig
src/entities/parser/: oni-entities-parser-particle-emitter.cpp
src/game/: CMakeLists.txt  game.cpp  oni-game.cpp
src/gameplay/: CMakeLists.txt  lap-tracker.cpp  oni-gameplay-lap-tracker.cpp
src/graphic/: CMakeLists.txt  batch-renderer-2d.cpp  debug-draw-box2d.cpp  font-manager.cpp  oni-graphic-batch-renderer-2d.cpp  oni-graphic-debug-draw-box2d.cpp  oni-graphic-font-manager.cpp  oni-graphic-renderer-2d.cpp  oni-graphic-renderer-ogl-quad.cpp  oni-graphic-renderer-ogl-strip.cpp  oni-graphic-renderer-ogl-tessellation.cpp  oni-graphic-renderer-ogl.cpp  oni-graphic-renderer-opengl.cpp  oni-graphic-renderer.cpp  oni-graphic-scene-manager.cpp  oni-graphic-shader.cpp  oni-graphic-smooth-brush.cpp  oni-graphic-system-grow-over-time.cpp  oni-graphic-system-material-transition.cpp  oni-graphic-system-particle-emitter.cpp  oni-graphic-tessellation-renderer-opengl.cpp  oni-graphic-texture-manager.cpp  oni-graphic-window.cpp  renderer-2d.cpp  scene-manager.cpp  shader.cpp  texture-manager.cpp  window.cpp
src/graphic/buffer/: CMakeLists.txt  buffer.cpp  index-buffer.cpp  oni-graphic-buffer.cpp  oni-graphic-frame-buffer.cpp  oni-graphic-index-buffer.cpp  oni-graphic-vertex-array.cpp  vertex-array.cpp
src/graphics/: CMakeLists.txt  batch-renderer-2d.cpp  debug-draw-box2d.cpp  font-manager.cpp  layer.cpp  light.cpp  renderer-2d.cpp  scene-manager.cpp  shader.cpp  texture-manager.cpp  texture.cpp  window.cpp
src/json/: CMakeLists.txt  oni-json.cpp
src/math/: CMakeLists.txt  collision.cpp  intesects.cpp  mat4.cpp  oni-math-function.cpp  oni-math-intersects.cpp  oni-math-mat4.cpp  oni-math-rand.cpp  oni-math-transformation.cpp  oni-math-vec2.cpp  oni-math-vec3.cpp  oni-math-vec4.cpp  oni-math-z-layer-manager.cpp  rand.cpp  transformation.cpp  vec2.cpp  vec3.cpp  vec4.cpp  z-layer-manager.cpp
src/network/: CMakeLists.txt  client.cpp  game-packet.cpp  oni-network-client.cpp  oni-network-peer.cpp  oni-network-server.cpp  packet-operation.cpp  packet.cpp  peer.cpp  server.cpp
src/physic/: CMakeLists.txt  car.cpp  collision.cpp  dynamics.cpp  projectile.cpp  transformation.cpp
src/physics/: CMakeLists.txt  car.cpp  collision.cpp  dynamics.cpp  movement.cpp  oni-physics-car-collision.cpp  oni-physics-car.cpp  oni-physics-collision.cpp  oni-physics-dynamics.cpp  oni-physics-projectile.cpp  oni-physics-system-car-input.cpp  oni-physics-system-car.cpp  oni-physics-system-jet-force.cpp  oni-physics-system-position.cpp  oni-physics-system-splat-on-rest.cpp  oni-physics-system-sync-pos.cpp  oni-physics-system-time-to-live.cpp  oni-physics.cpp  projectile.cpp  transformation.cpp  translation.cpp
src/utils/: CMakeLists.txt  file.cpp  io.cpp  oni-util-file.cpp
test/: CMakeLists.txt  main.cpp
test/enum/: todo
test/inc/oni-test/: oni-test-enum-storage.h  oni-test-enum.h  oni-test.h
test/src/: CMakeLists.txt  oni-test-enum-storage-a.cpp  oni-test-enum-storage-b.cpp  oni-test-enum-storage-c.cpp  oni-test-enum.cpp
tools/oni-particle-editor/: CMakeLists.txt
tools/oni-particle-editor/src/: CMakeLists.txt  main.cpp
tools/oni-particle-editor/src/entities/: CMakeLists.txt  oni-particle-editor-entities-factory.cpp
tools/oni-particle-editor/src/game/: CMakeLists.txt  oni-particle-editor-game.cpp
(+386 files in other folders)
